# mpipeline

./: .gitignore  .pre-commit-config.yaml  README.md  notebook.ipynb  pyproject.toml
mpipeline/: __init__.py  __main__.py  examples.py  pipeline.py  pipeline_tqdm.py  stage.py  thread_safe_dict.py  worker.py  worker_exception.py
mpipeline/tdict/: unavailble_dict.py
tests/: pipeline_test.py
