[tool.poetry]
name = "mpipeline"
version = "1.0.0"
description = "hi"
authors = ["Ali Modaresi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.0"
tblib = "^3.0.0"
ultradict = "^0.0.6"
atomics = "^1.0.2"



[tool.poetry.group.dev.dependencies]
types-tqdm = "^4.67.0.20241119"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
